force-app/main/default/objects/refedge__Event__c/fields/refedge__Deadline__c.field-meta.xml
<CustomField>
    <fullName>refedge__Deadline__c</fullName>
    <label>Deadline</label>
    <required>true</required>
    <type>Date</type>
</CustomField>