force-app/main/default/objects/refedge__Event__c/fields/refedge__Reference_Request__c.field-meta.xml
<CustomField>
    <fullName>refedge__Reference_Request__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Reference Request</label>
    <referenceTo>refedge__Reference_Request__c</referenceTo>
    <relationshipLabel>Events</relationshipLabel>
    <relationshipName>Events</relationshipName>
    <type>Lookup</type>
</CustomField>