force-app/main/default/objects/refedge__Event__c/fields/refedge__Reference_Request_Additional_Info__c.field-meta.xml
<CustomField>
    <fullName>refedge__Reference_Request_Additional_Info__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Reference Request Additional Info</label>
    <referenceTo>refedge__Reference_Request_Additional_Info__c</referenceTo>
    <relationshipLabel>Events</relationshipLabel>
    <relationshipName>Events</relationshipName>
    <type>Lookup</type>
</CustomField>