force-app/main/default/objects/refedge__Event__c/fields/refedge__Start_Date__c.field-meta.xml
<CustomField>
    <fullName>refedge__Start_Date__c</fullName>
    <label>Start Date</label>
    <type>DateTime</type>
</CustomField>